--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,6 +34,27 @@ jobs:
           name: test-results
           path: build/reports/tests/test
 
+  docker:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      contents: read
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build Docker image
+        run: docker build -t leonardocalheiros/poc-github-actions:${{ github.sha }} .
+
+      - name: Push Docker image to Docker Hub
+        run: docker push leonardocalheiros/poc-github-actions:${{ github.sha }}
+
   dependency-submission:
     runs-on: ubuntu-latest
     permissions:
