--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,7 +25,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build and Test with Gradle Wrapper
-        run: ./gradlew clean test build
+        run: ./gradlew clean test bootJar
 
       - name: Archive Test Results
         if: always()
