feat: add new docker tag in gradle.yml

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -57,7 +57,9 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: leonardocalheiros/poc-github-actions:${{ github.sha }}
+          tags: |
+            leonardocalheiros/poc-github-actions:${{ github.sha }}
+            leonardocalheiros/poc-github-actions:latest
 
   dependency-submission:
     runs-on: ubuntu-latest
