--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,6 +5,7 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -40,6 +41,7 @@ jobs:
     needs: build
     permissions:
       contents: read
+    if: github.event_name == 'workflow_dispatch'
 
     steps:
       - name: Checkout code
