--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,6 +5,7 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
+    types: [closed]
 
 jobs:
   build:
@@ -40,6 +41,7 @@ jobs:
     needs: build
     permissions:
       contents: read
+    if: github.event.pull_request.merged == true
 
     steps:
       - name: Checkout code
