--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,7 +5,7 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
-    types: [closed]
+    types: [opened, synchronize, reopened]
 
 jobs:
   build:
@@ -41,7 +41,7 @@ jobs:
     needs: build
     permissions:
       contents: read
-    if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true || github.event_name == 'push'
 
     steps:
       - name: Checkout code
